# stock-opname-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.fleet/: run.json
migrations/: 20221005170258_import_extension.down.sql  20221005170258_import_extension.up.sql  20221006184649_create_users_table.up.sql  20221007183639_create_branches_table.down.sql  20221007183639_create_branches_table.up.sql  20221007183857_create_products_table.down.sql  20221007183857_create_products_table.up.sql  20221007184032_create_specifications_table.down.sql  20221007184032_create_specifications_table.up.sql  20221007184134_create_product_specifications_table.down.sql  20221007184134_create_product_specifications_table.up.sql  20221007184255_create_specification_histories_table.down.sql  20221007184255_create_specification_histories_table.up.sql  20221011234633_create_transactions_table.down.sql  20221011234633_create_transactions_table.up.sql  20221012094117_create_transaction_items_table.down.sql  20221012094117_create_transaction_items_table.up.sql  20221012094120_create_specification_histories_table.up.sql  20221111161647_add_branch_id_column_to_transactions_table.down.sql  20221111161647_add_branch_id_column_to_transactions_table.up.sql  20230614141100_create_oauth_access_tokens_table.up.sql
src/: config.rs  errors.rs  lib.rs  logger.rs  main.rs
src/handlers/: branch.rs  import.rs  login.rs  mod.rs  product.rs  register.rs  specification.rs  specification_history.rs  transaction.rs  user.rs
src/middlewares/: headers.rs  (+2 more)
(+17 files in other folders)
